lombok dependency added and entity class has been created

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependencies>
+    <!-- Other dependencies -->
+    <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.22</version> <!-- Use the latest version -->
+        <scope>provided</scope>
+    </dependency>
+</dependencies>
+
 	</dependencies>
 
 	<build>
