repository class added to from crud operation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/yourdatabase
+spring.datasource.url=jdbc:postgresql://localhost:5432/Crud
 spring.datasource.username=postgresql
 spring.datasource.password=wasim@123
 spring.datasource.driver-class-name=org.postgresql.Driver
