crud operation by using spring boot has been done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/Crud
-spring.datasource.username=postgresql
+spring.datasource.username=postgres
 spring.datasource.password=wasim@123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
